<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2008 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
-->
<resources>
    <!-- Title for Latin keyboard  -->
    <string name="ime_name">Terminal++ Keyboard</string>

    <!-- Symbols that are commonly considered word separators in this language -->
    <string name="word_separators">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>

    <!-- Labels on soft keys -->
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_send_key">Send</string>
    
   <string name="application_terminal">Terminal IDE</string>
   <string name="preferences">Preferences</string>
   <string name="new_window">New window</string>
   <string name="close_window">Close window</string>
   <string name="window_list">Windows</string>
   <string name="prev_window">Prev window</string>
   <string name="next_window">Next window</string>
   <string name="reset">Reset term</string>
   <string name="send_email">Email to</string>
   <string name="special_keys">Special keys</string>
   <string name="toggle_soft_keyboard">Toggle soft keyboard</string>

   <string name="enable_wakelock">Take WakeLock</string>
   <string name="disable_wakelock">Drop WakeLock</string>
   <string name="enable_wifilock">Take WifiLock</string>
   <string name="disable_wifilock">Drop WifiLock</string>

   <string name="edit_text">Edit text</string>
   <string name="select_text">Select text</string>
   <string name="copy_all">Copy all</string>
   <string name="paste">Paste</string>

   <string name="service_notify_text">Terminal session is running</string>

   <!-- Preference dialog -->
   <string name="screen_preferences">Screen</string>

   <string name="title_statusbar_preference">Status bar</string>
   <string name="summary_statusbar_preference">Show/hide status bar.</string>
   <string name="dialog_title_statusbar_preference">Status bar</string>

   <string name="title_cursorstyle_preference">Cursor style</string>
   <string name="summary_cursorstyle_preference">Choose cursor style.</string>
   <string name="dialog_title_cursorstyle_preference">Cursor style</string>

   <string name="title_cursorblink_preference">Cursor blink</string>
   <string name="summary_cursorblink_preference">Choose cursor blink.</string>
   <string name="dialog_title_cursorblink_preference">Cursor blink</string>

   <string name="text_preferences">Text</string>

   <string name="title_fontsize_preference">Font size</string>
   <string name="summary_fontsize_preference">Choose character height in points.</string>
   <string name="dialog_title_fontsize_preference">Font size</string>

   <string name="title_color_preference">Colors</string>
   <string name="summary_color_preference">Choose text color.</string>
   <string name="dialog_title_color_preference">Text color</string>

   <string name="keyboard_preferences">Keyboard</string>

   <string name="title_controlkey_preference">Control key</string>
   <string name="summary_controlkey_preference">Choose control key.</string>
   <string name="dialog_title_controlkey_preference">Control key</string>

   <string name="title_fnkey_preference">Fn key</string>
   <string name="summary_fnkey_preference">Choose Fn key.</string>
   <string name="dialog_title_fnkey_preference">Fn key</string>

   <string name="title_ime_preference">Input method</string>
   <string name="summary_ime_preference">Choose input method for soft keyboard.</string>
   <string name="dialog_title_ime_preference">Input method</string>

   <string name="shell_preferences">Shell</string>
   <string name="title_shell_preference">Command line</string>
   <string name="summary_shell_preference">Specify the shell command line.</string>
   <string name="dialog_title_shell_preference">Shell</string>

   <string name="title_initialcommand_preference">Initial command</string>
   <string name="summary_initialcommand_preference">Sent to the shell when it starts.</string>
   <string name="dialog_title_initialcommand_preference">Initial Command</string>

   <!-- Don't localize these default values -->
   <string name="default_value_statusbar_preference">1</string>
   <string name="default_value_cursorstyle_preference">0</string>
   <string name="default_value_cursorblink_preference">0</string>
   <string name="default_value_fontsize_preference">12</string>
   <string name="default_value_color_preference">1</string>
   <string name="default_value_controlkey_preference">7</string>
   <string name="default_value_fnkey_preference">7</string>
   <string name="default_value_ime_preference">0</string>
   <string name="default_value_shell_preference">/system/bin/sh -</string>
   <string name="default_value_initialcommand_preference">export HOME=/data/data/com.spartacusrex.spartacuside/files;cd $HOME</string>
   
   <string name="control_key_dialog_title">Control and Function Keys</string>
   <!-- The word CTRLKEY should be left un-translated. It will be replaced at run-time with the
        actual control key key name. -->
   <string name="control_key_dialog_control_text">CTRLKEY Space : Control-@ (NUL)\nCTRLKEY A..Z : Control-A..Z\nCTRLKEY 5 : Control-]\nCTRLKEY 6 : Control-^\nCTRLKEY 7 : Control-_\nCTRLKEY 9 : F11\nCTRLKEY 0 : F12</string>
  <string name="control_key_dialog_control_disabled_text">No control key set.</string>
  <!-- The word FNKEY should be left un-translated. It will be replaced at run-time with the
       actual function key key name. -->
  <string name="control_key_dialog_fn_text">FNKEY 1..9 : F1-F9\nFNKEY 0 : F10\nFNKEY W : Up\nFNKEY A : Left\nFNKEY S : Down\nFNKEY D : Right\nFNKEY P : PageUp\nFNKEY N : PageDown\nFNKEY T : Tab\nFNKEY L : | (pipe)\nFNKEY U : _ (underscore)\nFNKEY E : Control-[ (ESC)\nFNKEY X : Delete\nFNKEY I : Insert\nFNKEY H : Home\nFNKEY F : End\nFNKEY . : Control-\\\n</string>
  <string name="control_key_dialog_fn_disabled_text">No function key set.</string>
   
</resources>
