<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/screen_preferences">

        <ListPreference
                android:key="statusbar"
                android:defaultValue="@string/default_value_statusbar_preference"
                android:title="@string/title_statusbar_preference"
                android:summary="@string/summary_statusbar_preference"
                android:entries="@array/entries_statusbar_preference"
                android:entryValues="@array/entryvalues_statusbar_preference"
                android:dialogTitle="@string/dialog_title_statusbar_preference" />

<!--
        <ListPreference
                android:key="cursorstyle"
                android:defaultValue="@string/default_value_cursorstyle_preference"
                android:title="@string/title_cursorstyle_preference"
                android:summary="@string/summary_cursorstyle_preference"
                android:entries="@array/entries_cursorstyle_preference"
                android:entryValues="@array/entryvalues_cursorstyle_preference"
                android:dialogTitle="@string/dialog_title_cursorstyle_preference" />

        <ListPreference
                android:key="cursorblink"
                android:defaultValue="@string/default_value_cursorblink_preference"
                android:title="@string/title_cursorblink_preference"
                android:summary="@string/summary_cursorblink_preference"
                android:entries="@array/entries_cursorblink_preference"
                android:entryValues="@array/entryvalues_cursorblink_preference"
                android:dialogTitle="@string/dialog_title_cursorblink_preference" />
-->

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/text_preferences">

        <ListPreference
                android:key="fontsize"
                android:defaultValue="@string/default_value_fontsize_preference"
                android:title="@string/title_fontsize_preference"
                android:summary="@string/summary_fontsize_preference"
                android:entries="@array/entries_fontsize_preference"
                android:entryValues="@array/entryvalues_fontsize_preference"
                android:dialogTitle="@string/dialog_title_fontsize_preference" />

        <ListPreference
                android:key="color"
                android:defaultValue="@string/default_value_color_preference"
                android:title="@string/title_color_preference"
                android:summary="@string/summary_color_preference"
                android:entries="@array/entries_color_preference"
                android:entryValues="@array/entryvalues_color_preference"
                android:dialogTitle="@string/dialog_title_color_preference" />

    </PreferenceCategory>

    <PreferenceCategory android:title="WAKE-LOCK Options">

        <ListPreference
                android:key="cpulock"
                android:defaultValue="1"
                android:title="CPU Lock"
                android:summary="Keep the CPU running at all times"
                android:entries="@array/entries_yesno"
                android:entryValues="@array/entryvalues_yesno"
                android:dialogTitle="CPU Lock" />

        <ListPreference
                android:key="screenlock"
                android:defaultValue="0"
                android:title="Screen Lock"
                android:summary="Keep the screen on at all times [Though it can dim]"
                android:entries="@array/entries_yesno"
                android:entryValues="@array/entryvalues_yesno"
                android:dialogTitle="Screen Lock" />

        <ListPreference
                android:key="wifilock"
                android:defaultValue="0"
                android:title="Wifi Lock"
                android:summary="Keep the wifi on at all times"
                android:entries="@array/entries_yesno"
                android:entryValues="@array/entryvalues_yesno"
                android:dialogTitle="Wifi Lock" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Special KEYS mapping">

        <ListPreference
                android:key="controlkey"
                android:defaultValue="@string/default_value_controlkey_preference"
                android:title="CTRL Key"
                android:summary="@string/summary_controlkey_preference"
                android:entries="@array/entries_controlkey_preference"
                android:entryValues="@array/entryvalues_controlkey_preference"
                android:dialogTitle="@string/dialog_title_controlkey_preference" />

        <ListPreference
                android:key="fnkey"
                android:defaultValue="@string/default_value_fnkey_preference"
                android:title="ESC Key"
                android:summary="Choose a hard key for ESC"
                android:entries="@array/entries_fnkey_preference"
                android:entryValues="@array/entryvalues_fnkey_preference"
                android:dialogTitle="ESC Key" />

        <!--<ListPreference
                android:key="ime"
                android:defaultValue="@string/default_value_ime_preference"
                android:title="@string/title_ime_preference"
                android:summary="@string/summary_ime_preference"
                android:entries="@array/entries_ime_preference"
                android:entryValues="@array/entryvalues_ime_preference"
                android:dialogTitle="@string/dialog_title_ime_preference" />-->

    </PreferenceCategory>

    <!--<PreferenceCategory
        android:title="@string/shell_preferences">

    <EditTextPreference
            android:key="shell"
            android:defaultValue="@string/default_value_shell_preference"
            android:title="@string/title_shell_preference"
            android:summary="@string/summary_shell_preference"
            android:dialogTitle="@string/dialog_title_shell_preference" />
    <EditTextPreference
            android:key="initialcommand"
            android:defaultValue="@string/default_value_initialcommand_preference"
            android:title="@string/title_initialcommand_preference"
            android:summary="@string/summary_initialcommand_preference"
            android:dialogTitle="@string/dialog_title_initialcommand_preference" />
    </PreferenceCategory>-->
    
</PreferenceScreen>
